--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/styles": "^3.0.0-alpha.10",
     "axios": "^0.18.0",
     "material-ui": "^0.20.2",
     "react": "^16.8.4",
